fix a bit of spacing that was affecting by bootstrap and turn spy off for links

--- a/src/components/NavMenu/NavMenu.css
+++ b/src/components/NavMenu/NavMenu.css
@@ -69,7 +69,7 @@
 @media (max-width: 992px) {
 
     .nav_menu_items {
-        padding-top: 5em;
+        padding-top: 4em;
         background-color: rgb(121, 189, 245);
         text-align: center;
         font-size: 20px;
@@ -100,7 +100,7 @@
     }
 
     .display_true {
-        height: 200px;
+        height: 300px;
         transition: all .5s ease-in-out;
     }
 
